# ai-222

./: pyproject.toml
src/notebooks/: torch_lr.ipynb  torch_torch_nn.ipynb  torch_tutorial.ipynb
